apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: starter-kit

  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: web
    app.kubernetes.io/version: latest
    app.kubernetes.io/managed-by: argocd
    project: devops-starter-kit
    environment: local

spec:
  replicas: 2
  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/component: web
        app.kubernetes.io/version: latest
        project: devops-starter-kit
        environment: local

    spec:
      imagePullSecrets:
        - name: ecr-secret

      terminationGracePeriodSeconds: 30

      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101

      containers:
        - name: frontend

          image: 177001539059.dkr.ecr.ap-south-1.amazonaws.com/devops-starter-kit-frontend:57adb7f
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx

            - name: nginx-run
              mountPath: /var/run

            - name: nginx-tmp
              mountPath: /tmp

          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

      volumes:
        - name: nginx-cache
          emptyDir: {}

        - name: nginx-run
          emptyDir: {}

        - name: nginx-tmp
          emptyDir: {}
