apps/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: starter-kit

  labels:
    app.kubernetes.io/name: frontend

spec:
  selector:
    app.kubernetes.io/name: frontend

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
