apps/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: starter-kit-ingress
  namespace: starter-kit

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - host: starter.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api(/|$)(.*)
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 8000
